@@ -179,9 +179,16 @@
       %% \item New \code{orderL(lst, ....)} for use in \code{do.call()} to
       %% avoid the name problem seen in \PR{17119}.
 
-      \item \code{try()} gets a new argument \code{outFile} with a default
+      \item \code{try()} gains a new argument \code{outFile} with a default
       that can be modified via \code{options(try.outFile = .)}, useful
       notably for \code{Sweave}.
+
+      \item The unexported low-level functions in package \pkg{parallel}
+      for passing serialized \R objects to and from forked children now
+      support long vectors on 64-bit platforms.  This removes some
+      limits on higher-level functions such as \code{mclapply()} (but
+      returning gigabyte results from forked processes \emph{via}
+      serialization should be avoided if at all possible).
     }
   }
 
@@ -338,7 +345,7 @@
       \item \code{droplevels(f)} now keeps <NA> levels when present.
 
       \item In integer arithmetic, \code{NULL} is now treated as
-      \code{integer(0)} where it was \code{double(0)}, previously.
+      \code{integer(0)} whereas it was previously treated as \code{double(0)}.
     }
   }
 }
